--- a/views/createProfile.ejs
+++ b/views/createProfile.ejs
@@ -1,23 +1,21 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
   <title>Users / Profile - NiceAdmin Bootstrap Template</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
   <link href="/img/favicon.png" rel="icon">
   <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <!-- Google Fonts -->
+  
   <link href="https://fonts.gstatic.com" rel="preconnect">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -26,16 +24,16 @@
   <link href="/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="/vendor/simple-datatables/style.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+ 
   <link href="/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
+   <!-- =======================================================
   * Template Name: NiceAdmin
   * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
   * Updated: Apr 20 2024 with Bootstrap v5.3.3
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  ========================================================  -->
 </head>
 
 <body>
@@ -225,10 +223,33 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+              <a class="dropdown-item d-flex align-items-center" href="">
                 <i class="bi bi-person"></i>
                 <span>My Profile</span>
               </a>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+
+            <li>
+              <a class="dropdown-item d-flex align-items-center" href="">
+                <i class="bi bi-gear"></i>
+                <span>Account Settings</span>
+              </a>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+
+            <li>
+              <a class="dropdown-item d-flex align-items-center" href="">
+                <i class="bi bi-question-circle"></i>
+                <span>Need Help?</span>
+              </a>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
             </li>
 
             <li>
@@ -257,7 +278,7 @@
         </a>
       </li><!-- End Dashboard Nav -->
 
-      <!-- <li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
           <i class="bi bi-menu-button-wide"></i><span>Components</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
@@ -333,8 +354,7 @@
             </a>
           </li>
         </ul>
-      </li> -->
-      <!-- End Components Nav -->
+      </li><!-- End Components Nav -->
 
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
@@ -455,149 +475,22 @@
   <!-- End Sidebar-->
 
   <main id="main" class="main">
+    <!-- End Page Title -->
+   <!-- createProfile.ejs -->
+<form action="/createProfile" method="POST">
+  <input type="text" name="Fullname" placeholder="Full Name">
+  <input type="text" name="About" placeholder="About">
+  <input type="text" name="Company" placeholder="Company">
+  <input type="text" name="Job" placeholder="Job">
+  <input type="text" name="Country" placeholder="Country">
+  <input type="text" name="Address" placeholder="Address">
+  <input type="text" name="Phone" placeholder="Phone">
+  <input type="email" name="Email" placeholder="Email">
+  <button type="submit">Create Profile</button>
+</form>
 
-    <div class="pagetitle">
-      <h1>Profile</h1>
-      <nav>
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item">Users</li>
-          <li class="breadcrumb-item active">Profile</li>
-        </ol>
-      </nav>
-    </div>
-
-    <section class="section profile">
-      <div class="row">
-        <div class="col-xl-4">
-          <div class="card">
-            <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
-              <img src="/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-              <% console.log("Profile:", profile); %>
-              <h2><%= profile.Fullname %></h2>
-              <h3><%= profile.Job %></h3>
-              <div class="social-links mt-2">
-                <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-    
-        <div class="col-xl-8">
-          <div class="card">
-            <div class="card-body pt-3">
-              <!-- Bordered Tabs -->
-              <ul class="nav nav-tabs nav-tabs-bordered">
-                <li class="nav-item">
-                  <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">Overview</button>
-                </li>
-                <li class="nav-item">
-                  <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">Edit Profile</button>
-                </li>
-              </ul>
-              <div class="tab-content pt-2">
-                <div class="tab-pane fade show active profile-overview" id="profile-overview">
-                  <h5 class="card-title">About</h5>
-                  <p class="small fst-italic"><%= profile.About %></p>
-    
-                  <h5 class="card-title">Profile Details</h5>
-                  <div class="row">
-                    <div class="col-lg-3 col-md-4 label">Full Name</div>
-                    <div class="col-lg-9 col-md-8"><%= profile.Fullname %></div>
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-3 col-md-4 label">Job</div>
-                    <div class="col-lg-9 col-md-8"><%= profile.Job %></div>
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-3 col-md-4 label">Company</div>
-                    <div class="col-lg-9 col-md-8"><%= profile.Company %></div>
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-3 col-md-4 label">Country</div>
-                    <div class="col-lg-9 col-md-8"><%= profile.Country %></div>
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-3 col-md-4 label">Address</div>
-                    <div class="col-lg-9 col-md-8"><%= profile.Address %></div>
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-3 col-md-4 label">Phone</div>
-                    <div class="col-lg-9 col-md-8"><%= profile.Phone %></div>
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-3 col-md-4 label">Email</div>
-                    <div class="col-lg-9 col-md-8"><%= profile.Email %></div>
-                  </div>
-                </div>
-                <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
-                  <!-- Profile Edit Form -->
-                  <form action="/profile/<%= profile._id %>/update" method="POST">
-                    <div class="row mb-3">
-                      <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Full Name</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="Fullname" type="text" class="form-control" id="fullName" value="<%= profile.Fullname %>">
-                      </div>
-                    </div>
-                    <div class="row mb-3">
-                      <label for="about" class="col-md-4 col-lg-3 col-form-label">About</label>
-                      <div class="col-md-8 col-lg-9">
-                        <textarea name="About" class="form-control" id="about" style="height: 100px"><%= profile.About %></textarea>
-                      </div>
-                    </div>
-                    <div class="row mb-3">
-                      <label for="company" class="col-md-4 col-lg-3 col-form-label">Company</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="Company" type="text" class="form-control" id="company" value="<%= profile.Company %>">
-                      </div>
-                    </div>
-                    <div class="row mb-3">
-                      <label for="job" class="col-md-4 col-lg-3 col-form-label">Job</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="Job" type="text" class="form-control" id="job" value="<%= profile.Job %>">
-                      </div>
-                    </div>
-                    <div class="row mb-3">
-                      <label for="country" class="col-md-4 col-lg-3 col-form-label">Country</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="Country" type="text" class="form-control" id="country" value="<%= profile.Country %>">
-                      </div>
-                    </div>
-                    <div class="row mb-3">
-                      <label for="address" class="col-md-4 col-lg-3 col-form-label">Address</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="Address" type="text" class="form-control" id="address" value="<%= profile.Address %>">
-                      </div>
-                    </div>
-                    <div class="row mb-3">
-                      <label for="phone" class="col-md-4 col-lg-3 col-form-label">Phone</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="Phone" type="text" class="form-control" id="phone" value="<%= profile.Phone %>">
-                      </div>
-                    </div>
-                    <div class="row mb-3">
-                      <label for="email" class="col-md-4 col-lg-3 col-form-label">Email</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="Email" type="email" class="form-control" id="email" value="<%= profile.Email %>">
-                      </div>
-                    </div>
-                    <div class="text-center">
-                      <button type="submit" class="btn btn-primary">Save Changes</button>
-                    </div>
-                  </form><!-- End Profile Edit Form -->
-                </div>
-              </div><!-- End Bordered Tabs -->
-            </div>
-          </div>
-        </div>
-        
-      </div>
-    </section>
-    
-
+  
+   
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -614,7 +507,8 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="/vendor/apexcharts/apexcharts.min.js"></script>
@@ -631,4 +525,21 @@
 
 </body>
 
-</html>
+</html> -->
+
+
+
+
+
+
+<!-- <form action="/createProfile" method="POST">
+  <input type="text" name="Fullname" placeholder="Full Name">
+  <input type="text" name="About" placeholder="About">
+  <input type="text" name="Company" placeholder="Company">
+  <input type="text" name="Job" placeholder="Job">
+  <input type="text" name="Country" placeholder="Country">
+  <input type="text" name="Address" placeholder="Address">
+  <input type="text" name="Phone" placeholder="Phone">
+  <input type="email" name="Email" placeholder="Email">
+  <button type="submit">Create Profile</button>
+</form> -->
