--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,7 +15,9 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -473,26 +475,34 @@
           <div class="card">
             <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
               <img src="/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-              <% console.log("Profile:", profile); %>
-              <h2><%= profile.Fullname %></h2>
-              <h3><%= profile.Job %></h3>
-              <div class="social-links mt-2">
-                <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-              </div>
+              <% if (profile) { %>
+                <h2>
+                  <%= profile.Fullname %>
+                </h2>
+                <h3>
+                  <%= profile.Job %>
+                </h3>
+                <% } else { %>
+                  <p>Profile not found.</p>
+                  <% } %>
+                    <div class="social-links mt-2">
+                      <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+                      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+                      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+                      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                    </div>
             </div>
           </div>
         </div>
-    
+
         <div class="col-xl-8">
           <div class="card">
             <div class="card-body pt-3">
               <!-- Bordered Tabs -->
               <ul class="nav nav-tabs nav-tabs-bordered">
                 <li class="nav-item">
-                  <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">Overview</button>
+                  <button class="nav-link active" data-bs-toggle="tab"
+                    data-bs-target="#profile-overview">Overview</button>
                 </li>
                 <li class="nav-item">
                   <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">Edit Profile</button>
@@ -501,102 +511,164 @@
               <div class="tab-content pt-2">
                 <div class="tab-pane fade show active profile-overview" id="profile-overview">
                   <h5 class="card-title">About</h5>
-                  <p class="small fst-italic"><%= profile.About %></p>
-    
+                  <p class="small fst-italic">
+                    <%= profile.About %>
+                  </p>
+
                   <h5 class="card-title">Profile Details</h5>
                   <div class="row">
                     <div class="col-lg-3 col-md-4 label">Full Name</div>
-                    <div class="col-lg-9 col-md-8"><%= profile.Fullname %></div>
+                    <div class="col-lg-9 col-md-8">
+                      <%= profile.Fullname %>
+                    </div>
                   </div>
                   <div class="row">
                     <div class="col-lg-3 col-md-4 label">Job</div>
-                    <div class="col-lg-9 col-md-8"><%= profile.Job %></div>
+                    <div class="col-lg-9 col-md-8">
+                      <%= profile.Job %>
+                    </div>
                   </div>
                   <div class="row">
                     <div class="col-lg-3 col-md-4 label">Company</div>
-                    <div class="col-lg-9 col-md-8"><%= profile.Company %></div>
+                    <div class="col-lg-9 col-md-8">
+                      <%= profile.Company %>
+                    </div>
                   </div>
                   <div class="row">
                     <div class="col-lg-3 col-md-4 label">Country</div>
-                    <div class="col-lg-9 col-md-8"><%= profile.Country %></div>
+                    <div class="col-lg-9 col-md-8">
+                      <%= profile.Country %>
+                    </div>
                   </div>
                   <div class="row">
                     <div class="col-lg-3 col-md-4 label">Address</div>
-                    <div class="col-lg-9 col-md-8"><%= profile.Address %></div>
+                    <div class="col-lg-9 col-md-8">
+                      <%= profile.Address %>
+                    </div>
                   </div>
                   <div class="row">
                     <div class="col-lg-3 col-md-4 label">Phone</div>
-                    <div class="col-lg-9 col-md-8"><%= profile.Phone %></div>
+                    <div class="col-lg-9 col-md-8">
+                      <%= profile.Phone %>
+                    </div>
                   </div>
                   <div class="row">
                     <div class="col-lg-3 col-md-4 label">Email</div>
-                    <div class="col-lg-9 col-md-8"><%= profile.Email %></div>
+                    <div class="col-lg-9 col-md-8">
+                      <%= profile.Email %>
+                    </div>
                   </div>
                 </div>
                 <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
                   <!-- Profile Edit Form -->
                   <form action="/profile/<%= profile._id %>/update" method="POST">
                     <div class="row mb-3">
+                      <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
+                      <div class="col-md-8 col-lg-9">
+                        <img src="/img/profile-img.jpg" alt="Profile">
+                        <div class="pt-2">
+                          <a href="#" class="btn btn-primary btn-sm" title="Upload new profile image"><i class="bi bi-upload"></i></a>
+                          <a href="#" class="btn btn-danger btn-sm" title="Remove my profile image"><i class="bi bi-trash"></i></a>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="row mb-3">
                       <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Full Name</label>
                       <div class="col-md-8 col-lg-9">
                         <input name="Fullname" type="text" class="form-control" id="fullName" value="<%= profile.Fullname %>">
                       </div>
                     </div>
+
                     <div class="row mb-3">
                       <label for="about" class="col-md-4 col-lg-3 col-form-label">About</label>
                       <div class="col-md-8 col-lg-9">
-                        <textarea name="About" class="form-control" id="about" style="height: 100px"><%= profile.About %></textarea>
+                        <textarea name="About"><%= profile.About %></textarea>
                       </div>
                     </div>
+
                     <div class="row mb-3">
                       <label for="company" class="col-md-4 col-lg-3 col-form-label">Company</label>
                       <div class="col-md-8 col-lg-9">
                         <input name="Company" type="text" class="form-control" id="company" value="<%= profile.Company %>">
                       </div>
                     </div>
+
                     <div class="row mb-3">
-                      <label for="job" class="col-md-4 col-lg-3 col-form-label">Job</label>
+                      <label for="Job" class="col-md-4 col-lg-3 col-form-label">Job</label>
                       <div class="col-md-8 col-lg-9">
-                        <input name="Job" type="text" class="form-control" id="job" value="<%= profile.Job %>">
+                        <input name="Job" type="text" class="form-control" id="Job" value="<%= profile.Job %>">
                       </div>
                     </div>
+
                     <div class="row mb-3">
-                      <label for="country" class="col-md-4 col-lg-3 col-form-label">Country</label>
+                      <label for="Country" class="col-md-4 col-lg-3 col-form-label">Country</label>
                       <div class="col-md-8 col-lg-9">
-                        <input name="Country" type="text" class="form-control" id="country" value="<%= profile.Country %>">
+                        <input name="Country" type="text" class="form-control" id="Country" value="<%= profile.Country %>">
                       </div>
                     </div>
+
                     <div class="row mb-3">
-                      <label for="address" class="col-md-4 col-lg-3 col-form-label">Address</label>
+                      <label for="Address" class="col-md-4 col-lg-3 col-form-label">Address</label>
                       <div class="col-md-8 col-lg-9">
-                        <input name="Address" type="text" class="form-control" id="address" value="<%= profile.Address %>">
+                        <input name="Address" type="text" class="form-control" id="Address" value="<%= profile.Address %>">
                       </div>
                     </div>
+
                     <div class="row mb-3">
-                      <label for="phone" class="col-md-4 col-lg-3 col-form-label">Phone</label>
+                      <label for="Phone" class="col-md-4 col-lg-3 col-form-label">Phone</label>
                       <div class="col-md-8 col-lg-9">
-                        <input name="Phone" type="text" class="form-control" id="phone" value="<%= profile.Phone %>">
+                        <input name="Phone" type="text" class="form-control" id="Phone" value="<%= profile.Phone %>">
                       </div>
                     </div>
+
                     <div class="row mb-3">
-                      <label for="email" class="col-md-4 col-lg-3 col-form-label">Email</label>
+                      <label for="Email" class="col-md-4 col-lg-3 col-form-label">Email</label>
                       <div class="col-md-8 col-lg-9">
-                        <input name="Email" type="email" class="form-control" id="email" value="<%= profile.Email %>">
+                        <input name="Email" type="email" class="form-control" id="Email" value="<%= profile.Email %>">
                       </div>
                     </div>
+
+                    <!-- <div class="row mb-3">
+                      <label for="Twitter" class="col-md-4 col-lg-3 col-form-label">Twitter Profile</label>
+                      <div class="col-md-8 col-lg-9">
+                        <input name="twitter" type="text" class="form-control" id="Twitter" value="">
+                      </div>
+                    </div>
+
+                    <div class="row mb-3">
+                      <label for="Facebook" class="col-md-4 col-lg-3 col-form-label">Facebook Profile</label>
+                      <div class="col-md-8 col-lg-9">
+                        <input name="facebook" type="text" class="form-control" id="Facebook" value="https://facebook.com/#">
+                      </div>
+                    </div> -->
+
+                    <!-- <div class="row mb-3">
+                      <label for="Instagram" class="col-md-4 col-lg-3 col-form-label">Instagram Profile</label>
+                      <div class="col-md-8 col-lg-9">
+                        <input name="instagram" type="text" class="form-control" id="Instagram" value="https://instagram.com/#">
+                      </div>
+                    </div> -->
+
+                    <!-- <div class="row mb-3">
+                      <label for="Linkedin" class="col-md-4 col-lg-3 col-form-label">Linkedin Profile</label>
+                      <div class="col-md-8 col-lg-9">
+                        <input name="linkedin" type="text" class="form-control" id="Linkedin" value="https://linkedin.com/#">
+                      </div>
+                    </div> -->
+
                     <div class="text-center">
                       <button type="submit" class="btn btn-primary">Save Changes</button>
                     </div>
-                  </form><!-- End Profile Edit Form -->
+                  </form>
                 </div>
               </div><!-- End Bordered Tabs -->
             </div>
           </div>
         </div>
-        
       </div>
     </section>
-    
+
 
   </main><!-- End #main -->
 
@@ -614,7 +686,8 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="/vendor/apexcharts/apexcharts.min.js"></script>
@@ -630,5 +703,9 @@
   <script src="/js/main.js"></script>
 
 </body>
-
 </html>
+
+
+
+
+
