--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -439,7 +439,12 @@
           <span>Tables</span>
         </a>
       </li>
-
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="/tableX">
+          <i class="bi bi-person"></i>
+          <span>TableX</span>
+        </a>
+      </li>
       <li class="nav-item">
         <a class="nav-link collapsed" href="/error">
           <i class="bi bi-dash-circle"></i>
@@ -474,7 +479,7 @@
         <div class="col-xl-4">
           <div class="card">
             <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
-              <img src="/img/profile-img.jpg" alt="Profile" class="rounded-circle">
+              <img src="<%= profile.Profileimage %>" alt="Profile" class="rounded-circle">
               <% if (profile) { %>
                 <h2>
                   <%= profile.Fullname %>
@@ -562,17 +567,26 @@
                 <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
                   <!-- Profile Edit Form -->
                   <form action="/profile/<%= profile._id %>/update" method="POST">
-                    <div class="row mb-3">
+                    <!-- <div class="row mb-3">
                       <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
                       <div class="col-md-8 col-lg-9">
-                        <img src="/img/profile-img.jpg" alt="Profile">
+                        <img src="" alt="Profile">
                         <div class="pt-2">
                           <a href="#" class="btn btn-primary btn-sm" title="Upload new profile image"><i class="bi bi-upload"></i></a>
                           <a href="#" class="btn btn-danger btn-sm" title="Remove my profile image"><i class="bi bi-trash"></i></a>
                         </div>
                       </div>
-                    </div>
-
+                    </div> -->
+                    <!-- <div class="row mb-3">
+                      <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
+                      <div class="col-md-8 col-lg-9">
+                          <img src="<%= profile.Profileimage %>" alt="Profile" class="rounded-circle">
+                          <div class="pt-2">
+                              <input type="file" name="ProfileImage" accept="image/*">
+                              <button type="submit" class="btn btn-danger btn-sm" formaction="/profile/<%= profile._id %>/deleteImage">Delete Image</button>
+                          </div>
+                      </div>
+                  </div> -->
                     <div class="row mb-3">
                       <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Full Name</label>
                       <div class="col-md-8 col-lg-9">
