--- a/views/table.ejs
+++ b/views/table.ejs
@@ -459,7 +459,12 @@
           <span>Tables</span>
         </a>
       </li>
-
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="/tableX">
+          <i class="bi bi-person"></i>
+          <span>TableX</span>
+        </a>
+      </li>
       <li class="nav-item">
         <a class="nav-link collapsed" href="/error">
           <i class="bi bi-dash-circle"></i>
