--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -446,6 +446,12 @@
         </a>
       </li>
       <li class="nav-item">
+        <a class="nav-link collapsed" href="/payment">
+          <i class="bi bi-person"></i>
+          <span>Payment</span>
+        </a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link collapsed" href="/error">
           <i class="bi bi-dash-circle"></i>
           <span>Error 404</span>
