--- a/views/table.ejs
+++ b/views/table.ejs
@@ -280,7 +280,7 @@
         </a>
       </li><!-- End Dashboard Nav -->
 
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
           <i class="bi bi-menu-button-wide"></i><span>Components</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
@@ -356,7 +356,8 @@
             </a>
           </li>
         </ul>
-      </li><!-- End Components Nav -->
+      </li> -->
+      <!-- End Components Nav -->
 
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
@@ -463,6 +464,12 @@
         <a class="nav-link collapsed" href="/tableX">
           <i class="bi bi-person"></i>
           <span>TableX</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="/paymentbuy">
+          <i class="bi bi-person"></i>
+          <span>Payment</span>
         </a>
       </li>
       <li class="nav-item">
