--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -212,13 +212,13 @@
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
             <img src="/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+            <span class="d-none d-md-block dropdown-toggle ps-2"> <%= profile.Fullname %></span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Kevin Anderson</h6>
-              <span>Web Designer</span>
+              <h6> <%= profile.Fullname %></h6>
+              <span> <%= profile.Job %></span>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -500,33 +500,38 @@
         </ol>
       </nav>
     </div><!-- End Page Title -->
-
     <section class="section contact">
 
       <div class="row gy-4">
-
+    
         <div class="col-xl-6">
-
           <div class="row">
             <div class="col-lg-6">
               <div class="info-box card">
                 <i class="bi bi-geo-alt"></i>
                 <h3>Address</h3>
-                <p>A108 Adam Street,<br>New York, NY 535022</p>
+                <p>
+                  <%= profile.Address %><br>
+                  <%= profile.City %>  <%= profile.State %> <%= profile.ZipCode %>
+                </p>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="info-box card">
                 <i class="bi bi-telephone"></i>
                 <h3>Call Us</h3>
-                <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
+                <p>
+                  <%= profile.Phone %>
+                </p>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="info-box card">
                 <i class="bi bi-envelope"></i>
                 <h3>Email Us</h3>
-                <p>info@example.com<br>contact@example.com</p>
+                <p>
+                  <%= profile.Email %>
+                </p>
               </div>
             </div>
             <div class="col-lg-6">
@@ -537,43 +542,43 @@
               </div>
             </div>
           </div>
-
         </div>
-
+    
         <div class="col-xl-6">
           <div class="card p-4">
             <form action="/contact" method="post">
               <div class="row gy-4">
-        
+    
                 <div class="col-md-6">
                   <input type="text" name="Name" class="form-control" placeholder="Your Name" required>
                 </div>
-        
-                <div class="col-md-6 ">
+    
+                <div class="col-md-6">
                   <input type="email" class="form-control" name="Email" placeholder="Your Email" required>
                 </div>
-        
+    
                 <div class="col-md-12">
                   <input type="text" class="form-control" name="Subject" placeholder="Subject" required>
                 </div>
-        
+    
                 <div class="col-md-12">
                   <textarea class="form-control" name="Message" rows="6" placeholder="Message" required></textarea>
                 </div>
-        
+    
                 <div class="col-md-12 text-center">
                   <button type="submit">Send Message</button>
                 </div>
-        
+    
               </div>
             </form>
           </div>
         </div>
-        
-
+    
       </div>
-
+    
     </section>
+    
+   
 
   </main><!-- End #main -->
 
@@ -609,3 +614,4 @@
 </body>
 
 </html>
+ 
