--- a/views/help.ejs
+++ b/views/help.ejs
@@ -68,3 +68,90 @@ app.get('/new', (req, res) => {
 //dirname views ka matlab folder ka name or new ka matlab file ka name ayega.path require karna imp h.
 res.render(path.join(__dirname, 'views', 'new')); // Assuming new.ejs is located in the public folder
 }); -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<section class="section contact">
+
+    <div class="row gy-4">
+
+      <div class="col-xl-6">
+
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="info-box card">
+              <i class="bi bi-geo-alt"></i>
+              <h3>Address</h3>
+              <p>A108 Adam Street,<br>New York, NY 535022</p>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="info-box card">
+              <i class="bi bi-telephone"></i>
+              <h3>Call Us</h3>
+              <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="info-box card">
+              <i class="bi bi-envelope"></i>
+              <h3>Email Us</h3>
+              <p>info@example.com<br>contact@example.com</p>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="info-box card">
+              <i class="bi bi-clock"></i>
+              <h3>Open Hours</h3>
+              <p>Monday - Friday<br>9:00AM - 05:00PM</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="col-xl-6">
+        <div class="card p-4">
+          <form action="/contact" method="post">
+            <div class="row gy-4">
+      
+              <div class="col-md-6">
+                <input type="text" name="Name" class="form-control" placeholder="Your Name" required>
+              </div>
+      
+              <div class="col-md-6 ">
+                <input type="email" class="form-control" name="Email" placeholder="Your Email" required>
+              </div>
+      
+              <div class="col-md-12">
+                <input type="text" class="form-control" name="Subject" placeholder="Subject" required>
+              </div>
+      
+              <div class="col-md-12">
+                <textarea class="form-control" name="Message" rows="6" placeholder="Message" required></textarea>
+              </div>
+      
+              <div class="col-md-12 text-center">
+                <button type="submit">Send Message</button>
+              </div>
+      
+            </div>
+          </form>
+        </div>
+      </div>
+      
+
+    </div>
+
+  </section>
