--- a/views/paymentbuy.ejs
+++ b/views/paymentbuy.ejs
@@ -1,21 +1,345 @@
 <!DOCTYPE html>
-<html>
-<title>Stripe Payment Demo</title>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Pages / F.A.Q - NiceAdmin Bootstrap Template</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href="/img/favicon.png" rel="icon">
+  <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.gstatic.com" rel="preconnect">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="/vendor/quill/quill.snow.css" rel="stylesheet">
+  <link href="/vendor/quill/quill.bubble.css" rel="stylesheet">
+  <link href="/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="/vendor/simple-datatables/style.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="/css/style.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: NiceAdmin
+  * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
+  * Updated: Apr 20 2024 with Bootstrap v5.3.3
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+</head>
 <body>
-	<h3>Buy Shirt Just in Rs <%= amount %></h3>
-	<form action="paymentbuy" method="POST">
-    <input type="hidden" name="amount" value="<%= parseInt(amount)*100 %>">
-    <input type="hidden" name="productName" value="Shocks">
-	<script
-		src="//checkout.stripe.com/v2/checkout.js"
-		class="stripe-button"
-		data-key="<%= key %>"
-		data-amount="<%= parseInt(amount)*100 %>"
-		data-currency="inr"
-		data-name="Shirt"
-		data-description="Cotton Shirt Products"
-		data-locale="auto" >
-		</script>
-	</form>
+	<header id="header" class="header fixed-top d-flex align-items-center">
+
+		<div class="d-flex align-items-center justify-content-between">
+		  <a href="index.html" class="logo d-flex align-items-center">
+			<img src="/img/logo.png" alt="">
+			<span class="d-none d-lg-block">NiceAdmin</span>
+		  </a>
+		  <i class="bi bi-list toggle-sidebar-btn"></i>
+		</div><!-- End Logo -->
+	
+		<div class="search-bar">
+		  <form class="search-form d-flex align-items-center" method="POST" action="#">
+			<input type="text" name="query" placeholder="Search" title="Enter search keyword">
+			<button type="submit" title="Search"><i class="bi bi-search"></i></button>
+		  </form>
+		</div><!-- End Search Bar -->
+	
+		<nav class="header-nav ms-auto">
+		  <ul class="d-flex align-items-center">
+	
+			<li class="nav-item d-block d-lg-none">
+			  <a class="nav-link nav-icon search-bar-toggle " href="#">
+				<i class="bi bi-search"></i>
+			  </a>
+			</li><!-- End Search Icon-->
+		  </ul>
+		</nav><!-- End Icons Navigation -->
+	
+	  </header>
+	  <!-------sidebar----------->
+	  <aside id="sidebar" class="sidebar">
+		<ul class="sidebar-nav" id="sidebar-nav">
+	
+		  <li class="nav-item">
+			<a class="nav-link " href="/dashboard">
+			  <i class="bi bi-grid"></i>
+			  <span>Dashboard</span>
+			</a>
+		  </li><!-- End Dashboard Nav -->
+	
+		  <!-- <li class="nav-item">
+			<a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+			  <i class="bi bi-menu-button-wide"></i><span>Components</span><i class="bi bi-chevron-down ms-auto"></i>
+			</a>
+			<ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+			  <li>
+				<a href="components-alerts.html">
+				  <i class="bi bi-circle"></i><span>Alerts</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="components-accordion.html">
+				  <i class="bi bi-circle"></i><span>Accordion</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="components-badges.html">
+				  <i class="bi bi-circle"></i><span>Badges</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="components-breadcrumbs.html">
+				  <i class="bi bi-circle"></i><span>Breadcrumbs</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="components-buttons.html">
+				  <i class="bi bi-circle"></i><span>Buttons</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="components-cards.html">
+				  <i class="bi bi-circle"></i><span>Cards</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="components-carousel.html">
+				  <i class="bi bi-circle"></i><span>Carousel</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="components-list-group.html">
+				  <i class="bi bi-circle"></i><span>List group</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="components-modal.html">
+				  <i class="bi bi-circle"></i><span>Modal</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="components-tabs.html">
+				  <i class="bi bi-circle"></i><span>Tabs</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="components-pagination.html">
+				  <i class="bi bi-circle"></i><span>Pagination</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="components-progress.html">
+				  <i class="bi bi-circle"></i><span>Progress</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="components-spinners.html">
+				  <i class="bi bi-circle"></i><span>Spinners</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="components-tooltips.html">
+				  <i class="bi bi-circle"></i><span>Tooltips</span>
+				</a>
+			  </li>
+			</ul>
+		  </li> -->
+		  <!-- End Components Nav -->
+	
+		  <li class="nav-item">
+			<a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+			  <i class="bi bi-journal-text"></i><span>Forms</span><i class="bi bi-chevron-down ms-auto"></i>
+			</a>
+			<ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+			  <li>
+				<a href="forms-elements.html">
+				  <i class="bi bi-circle"></i><span>Form Elements</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="forms-layouts.html">
+				  <i class="bi bi-circle"></i><span>Form Layouts</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="forms-editors.html">
+				  <i class="bi bi-circle"></i><span>Form Editors</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="forms-validation.html">
+				  <i class="bi bi-circle"></i><span>Form Validation</span>
+				</a>
+			  </li>
+			</ul>
+		  </li><!-- End Forms Nav -->
+		  <li class="nav-item">
+			<a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
+			  <i class="bi bi-bar-chart"></i><span>Charts</span><i class="bi bi-chevron-down ms-auto"></i>
+			</a>
+			<ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+			  <li>
+				<a href="charts-chartjs.html">
+				  <i class="bi bi-circle"></i><span>Chart.js</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="charts-apexcharts.html">
+				  <i class="bi bi-circle"></i><span>ApexCharts</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="charts-echarts.html">
+				  <i class="bi bi-circle"></i><span>ECharts</span>
+				</a>
+			  </li>
+			</ul>
+		  </li><!-- End Charts Nav -->
+	
+		  <li class="nav-item">
+			<a class="nav-link collapsed" data-bs-target="#icons-nav" data-bs-toggle="collapse" href="#">
+			  <i class="bi bi-gem"></i><span>Icons</span><i class="bi bi-chevron-down ms-auto"></i>
+			</a>
+			<ul id="icons-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+			  <li>
+				<a href="icons-bootstrap.html">
+				  <i class="bi bi-circle"></i><span>Bootstrap Icons</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="icons-remix.html">
+				  <i class="bi bi-circle"></i><span>Remix Icons</span>
+				</a>
+			  </li>
+			  <li>
+				<a href="icons-boxicons.html">
+				  <i class="bi bi-circle"></i><span>Boxicons</span>
+				</a>
+			  </li>
+			</ul>
+		  </li><!-- End Icons Nav -->
+	
+	
+		  <li class="nav-item">
+			<a class="nav-link collapsed" href="/profile">
+			  <i class="bi bi-person"></i>
+			  <span>Profile</span>
+			</a>
+		  </li><!-- End Profile Page Nav -->
+	
+		  <li class="nav-item">
+			<a class="nav-link collapsed" href="/faq">
+			  <i class="bi bi-question-circle"></i>
+			  <span>F.A.Q</span>
+			</a>
+		  </li><!-- End F.A.Q Page Nav -->
+	
+		  <li class="nav-item">
+			<a class="nav-link collapsed" href="/contact">
+			  <i class="bi bi-envelope"></i>
+			  <span>Contact</span>
+			</a>
+		  </li><!-- End Contact Page Nav -->
+	
+		  <li class="nav-item">
+			<a class="nav-link collapsed" href="/table">
+			  <i class="bi bi-card-list"></i>
+			  <span>Tables</span>
+			</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link collapsed" href="/tableX">
+			  <i class="bi bi-person"></i>
+			  <span>TableX</span>
+			</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link collapsed" href="/paymentbuy">
+			  <i class="bi bi-person"></i>
+			  <span>Payment</span>
+			</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link collapsed" href="/error">
+			  <i class="bi bi-dash-circle"></i>
+			  <span>Error 404</span>
+			</a>
+		  </li><!-- End Error 404 Page Nav -->
+		  <li class="nav-item">
+			<a class="nav-link collapsed" href="/logout">
+			  <i class="bi bi-person"></i>
+			  <span>Logout</span>
+			</a>
+		  </li>
+		</ul>
+	  </aside>
+	  <main id="main" class="main">
+<div class="container">
+	<div class="row">
+		<div class="col-md-6">
+			<div class="card1">
+				<h3>Buy Shirt Just in Rs <%= amount %></h3>
+				<form action="paymentbuy" method="POST">
+				<input type="hidden" name="amount" value="<%= parseInt(amount)*100 %>">
+				<input type="hidden" name="productName" value="Shocks">
+				<script
+					src="//checkout.stripe.com/v2/checkout.js"
+					class="stripe-button"
+					data-key="<%= key %>"
+					data-amount="<%= parseInt(amount)*100 %>"
+					data-currency="inr"
+					data-name="Shirt"
+					data-description="Cotton Shirt Products"
+					data-locale="auto" >
+					</script>
+				</form>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="card2">
+
+			</div>
+		</div>
+	</div>
+</div>
+	</main>
+	<footer id="footer" class="footer">
+		<div class="copyright">
+		  &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
+		</div>
+		<div class="credits">
+		  <!-- All the links in the footer should remain intact. -->
+		  <!-- You can delete the links only if you purchased the pro version. -->
+		  <!-- Licensing information: https://bootstrapmade.com/license/ -->
+		  <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
+		  Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+		</div>
+	  </footer>
 </body>
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+<!-- Vendor JS Files -->
+<script src="/vendor/apexcharts/apexcharts.min.js"></script>
+<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/vendor/chart.js/chart.umd.js"></script>
+<script src="/vendor/echarts/echarts.min.js"></script>
+<script src="/vendor/quill/quill.js"></script>
+<script src="/vendor/simple-datatables/simple-datatables.js"></script>
+<script src="/vendor/tinymce/tinymce.min.js"></script>
+<script src="/vendor/php-email-form/validate.js"></script>
+
+<!-- Template Main JS File -->
+<script src="/js/main.js"></script>
+
 </html>
