--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -213,7 +213,7 @@
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="/img/profile-img.jpg" alt="Profile" class="rounded-circle">
+            <img src="<%= profile.Profileimage %>" alt="Profile" class="rounded-circle">
             <span class="d-none d-md-block dropdown-toggle ps-2"> <%= profile.Fullname %></span>
           </a><!-- End Profile Iamge Icon -->
 
@@ -491,106 +491,87 @@
                 </div>
                 <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
                   <!-- Profile Edit Form -->
-                  <form action="/profile/<%= profile._id %>/update" method="POST">
+                    <!-- Profile Image Section -->
                     <div class="row mb-3">
                       <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
                       <div class="col-md-8 col-lg-9">
-                          <img src="<%= profile.Profileimage %>" alt="Profile" class="rounded-circle">
-                          <div class="pt-2">
-                              <input type="file" name="ProfileImage" accept="image/*">
-                              <button type="submit" class="btn btn-danger btn-sm" formaction="/profile/<%= profile._id %>/deleteImage">Delete Image</button>
-                          </div>
+                        <img src="<%= profile.Profileimage %>" alt="Profile" class="rounded-circle">
+                        <div class="pt-2">
+                          <!-- Existing image delete button -->
+                          <button type="submit" class="btn btn-danger btn-sm" formaction="/profile/<%= profile._id %>/deleteImage">Delete Image</button>
+                        </div>
+                        <!-- Upload new image form -->
+                        <form action="/profile/<%= profile._id %>/uploadImage" method="post" enctype="multipart/form-data">
+                          <input type="file" name="Profileimage" id="Profileimage">
+                          <button type="submit" class="btn btn-primary btn-sm">Upload Image</button>
+                        </form>
                       </div>
-                  </div>
+                    </div>
+                    <form action="/profile/<%= profile._id %>/update" method="POST">
+                    <!-- Other Profile Fields -->
                     <div class="row mb-3">
                       <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Full Name</label>
                       <div class="col-md-8 col-lg-9">
                         <input name="Fullname" type="text" class="form-control" id="fullName" value="<%= profile.Fullname %>">
                       </div>
                     </div>
-
+                
                     <div class="row mb-3">
                       <label for="about" class="col-md-4 col-lg-3 col-form-label">About</label>
                       <div class="col-md-8 col-lg-9">
-                        <textarea name="About"><%= profile.About %></textarea>
+                        <textarea name="About" class="form-control"><%= profile.About %></textarea>
                       </div>
                     </div>
-
+                
                     <div class="row mb-3">
                       <label for="company" class="col-md-4 col-lg-3 col-form-label">Company</label>
                       <div class="col-md-8 col-lg-9">
                         <input name="Company" type="text" class="form-control" id="company" value="<%= profile.Company %>">
                       </div>
                     </div>
-
+                
                     <div class="row mb-3">
                       <label for="Job" class="col-md-4 col-lg-3 col-form-label">Job</label>
                       <div class="col-md-8 col-lg-9">
                         <input name="Job" type="text" class="form-control" id="Job" value="<%= profile.Job %>">
                       </div>
                     </div>
-
+                
                     <div class="row mb-3">
                       <label for="Country" class="col-md-4 col-lg-3 col-form-label">Country</label>
                       <div class="col-md-8 col-lg-9">
                         <input name="Country" type="text" class="form-control" id="Country" value="<%= profile.Country %>">
                       </div>
                     </div>
-
+                
                     <div class="row mb-3">
                       <label for="Address" class="col-md-4 col-lg-3 col-form-label">Address</label>
                       <div class="col-md-8 col-lg-9">
                         <input name="Address" type="text" class="form-control" id="Address" value="<%= profile.Address %>">
                       </div>
                     </div>
-
+                
                     <div class="row mb-3">
                       <label for="Phone" class="col-md-4 col-lg-3 col-form-label">Phone</label>
                       <div class="col-md-8 col-lg-9">
                         <input name="Phone" type="text" class="form-control" id="Phone" value="<%= profile.Phone %>">
                       </div>
                     </div>
-
+                
                     <div class="row mb-3">
                       <label for="Email" class="col-md-4 col-lg-3 col-form-label">Email</label>
                       <div class="col-md-8 col-lg-9">
                         <input name="Email" type="email" class="form-control" id="Email" value="<%= profile.Email %>">
                       </div>
                     </div>
-
-                    <!-- <div class="row mb-3">
-                      <label for="Twitter" class="col-md-4 col-lg-3 col-form-label">Twitter Profile</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="twitter" type="text" class="form-control" id="Twitter" value="">
-                      </div>
-                    </div>
-
-                    <div class="row mb-3">
-                      <label for="Facebook" class="col-md-4 col-lg-3 col-form-label">Facebook Profile</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="facebook" type="text" class="form-control" id="Facebook" value="https://facebook.com/#">
-                      </div>
-                    </div> -->
-
-                    <!-- <div class="row mb-3">
-                      <label for="Instagram" class="col-md-4 col-lg-3 col-form-label">Instagram Profile</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="instagram" type="text" class="form-control" id="Instagram" value="https://instagram.com/#">
-                      </div>
-                    </div> -->
-
-                    <!-- <div class="row mb-3">
-                      <label for="Linkedin" class="col-md-4 col-lg-3 col-form-label">Linkedin Profile</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="linkedin" type="text" class="form-control" id="Linkedin" value="https://linkedin.com/#">
-                      </div>
-                    </div> -->
-
+                
+                    <!-- Save Changes Button -->
                     <div class="text-center">
                       <button type="submit" class="btn btn-primary">Save Changes</button>
                     </div>
                   </form>
                 </div>
+                
               </div><!-- End Bordered Tabs -->
             </div>
           </div>
